brat/test/golden/kernel/delete.brat.golden
Error in test/golden/kernel/delete.brat@FC {start = Pos {line = 2, col = 15}, end = Pos {line = 2, col = 27}}:
deleteFst = { q0, q1 => q1 }
              ^^^^^^^^^^^^

  Type error: Variable(s) q0 haven't been used

